# svastha

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.node  README.md  SECURITY.md  compose.yaml  justfile  release-please-config.json
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml  README.md
crates/core/examples/: curation_vectors.rs  derive_vectors.rs  envelope_vectors.rs  event_vectors.rs  keyring_vectors.rs  mailbox_vectors.rs  relay_auth_vectors.rs
crates/core/src/: curation.rs  envelope.rs  event.rs  keyring.rs  keys.rs  lib.rs  mailbox.rs  relay.rs
crates/devtool/: Cargo.toml
crates/devtool/src/: lib.rs  main.rs
crates/devtool/tests/: decrypt.rs  import.rs
crates/import/: Cargo.toml  README.md
crates/import/src/: ccda.rs  dates.rs  fhir.rs  lib.rs
crates/import/tests/: ccda.rs  fhir.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: admin.rs  bootstrap.rs  cache.rs  chat.rs  client.rs  config.rs  extract.rs  identity.rs  index.rs  inference.rs  journal.rs  lib.rs  logtail.rs  main.rs  ocr.rs  poke.rs  retrieval.rs  state.rs  sync.rs
crates/node/tests/: ocr.rs  rag.rs  substrate.rs
crates/relay/: Cargo.toml  README.md
crates/relay/src/: auth.rs  grants.rs  landing.html  lib.rs  mailbox.rs  main.rs  nonce.rs  pokes.rs  push.rs  routes.rs  share.rs  store.rs
crates/relay/tests/: blobs.rs  grants.rs  landing.rs  mailbox.rs  nonce.rs  push.rs  shares.rs  sse.rs
crates/relay/tests/common/: mod.rs
crates/svastha/: Cargo.toml  README.md
crates/svastha/src/: lib.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
docs/: ARCHITECTURE.md  ROADMAP.md
docs/mockups/: ui-redesign.html
fixtures/: README.md
fixtures/ccda/: minimal-ccd.xml
fixtures/fhir/: bundle-minimal.json
spec/: README.md
spec/vectors/: curation.json  envelope.json  event.json  key-derivation.json  keyring.json  mailbox.json  relay-auth.json
web/: .gitignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.scripts.json  tsconfig.sw.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
web/e2e/: ask.spec.ts  correlate.spec.ts  cycle-patterns.spec.ts  cycle.spec.ts  devices-grants.spec.ts  doctor-share.spec.ts  export.spec.ts  file-share.spec.ts  helpers.ts  import.spec.ts  notifications.spec.ts  onboard.spec.ts  paper-record.spec.ts  proposals.spec.ts  push.spec.ts  quicklog.spec.ts  relay.spec.ts  screenshots.spec.ts  share-management.spec.ts  share-recipient.spec.ts  share.spec.ts  spine-overflow.spec.ts  summary-status.spec.ts  sync.spec.ts
web/public/dict/: LOINC_LICENSE.txt  cvx.json  loinc.json  manifest.json  rxnorm.json
web/scripts/build-changelog/: build.ts  parse.test.ts  parse.ts
web/scripts/build-changelog/__fixtures__/: changelog.fixture.md
web/scripts/build-code-dictionary/: SOURCES.md  build.ts  loinc-api.test.ts  loinc-api.ts  parsers.ts
web/src/: App.svelte  app.css  main.ts  sw.ts  vite-env.d.ts
web/src/components/: AppHeader.svelte  AttachmentViewer.svelte  Bloom.svelte  BottomBar.svelte  CitationList.svelte  ClinicianSummary.svelte  CycleStats.svelte  DoctorShareSheet.svelte  Favorites.svelte  FlarePanel.svelte  InstallSheet.svelte  Menu.svelte  NodeAdmin.svelte  NotificationSheet.svelte  PdfDoc.svelte  ProposalDraftRow.svelte  QrScanner.svelte  ShareView.svelte  Sheet.svelte  Spine.svelte  SpineEntry.svelte  SummarySection.svelte  TagChips.svelte  TagEditor.svelte  UpdateSheet.svelte
web/src/components/log/: CycleForm.svelte  ExerciseForm.svelte  FoodForm.svelte  LogShell.svelte  MedForm.svelte  MindfulnessForm.svelte  NoteForm.svelte  PaperRecordForm.svelte  SymptomForm.svelte  VitalsForm.svelte
web/src/lib/: attachments.ts  base64.ts  bloom-order.ts  category.ts  chat.ts  clipboard.ts  code-names.ts  codes.ts  correlate.ts  curation.ts  cycle.ts  cycleBand.ts  db.ts  dictionary.ts  doctorShare.ts  drafts.ts  events-stream.ts  events.ts  exchange.ts  export.ts  favorites.ts  fileShare.ts  grants.ts  hex.ts  import.ts  install.ts  kdf.ts  keyring.ts  keyvault.ts  log-kinds.ts  mailbox.ts  nodeadmin.ts  notification-sources.ts  notifications.ts  passkey.ts  pdf.ts  proposals.ts  provenance.ts  push-sw.ts  push.ts  (+19 more)
web/src/lib/__tests__/: attachments.test.ts  bloom-order.test.ts  build-code-dictionary.test.ts  category.test.ts  chat.test.ts  clipboard.test.ts  code-names.test.ts  correlate.test.ts  curation.test.ts  cycle.test.ts  cycleBand.test.ts  db.test.ts  dictionary.test.ts  doctorShare.test.ts  drafts.test.ts  dst.test.ts  events-stream.test.ts  exchange.test.ts  export.test.ts  fileShare.test.ts  grants.test.ts  hex.test.ts  import.test.ts  install.test.ts  kdf.test.ts  keyring.test.ts  keyvault.test.ts  mailbox.test.ts  node-builtins.d.ts  nodeadmin.test.ts  notifications.test.ts  proposals.test.ts  provenance.test.ts  push-sw.test.ts  push.test.ts  qr-scan.test.ts  router-match.test.ts  setup.ts  shareManagement.test.ts  shareRecipient.test.ts  (+6 more)
web/src/routes/: Ask.svelte  Correlate.svelte  Home.svelte  Import.svelte  Log.svelte  Onboard.svelte  Person.svelte  Proposals.svelte  Settings.svelte  Share.svelte  Unlock.svelte
web/src/routes/settings/: About.svelte  Appearance.svelte  Data.svelte  Devices.svelte  Notifications.svelte  Security.svelte  Sync.svelte
web/src/routes/share/: Doctor.svelte  People.svelte
web/src/styles/: base.css  tokens.css
