[package]
name = "svastha-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Svastha trust contract: encryption envelope and event schema. Compiles to native and WASM."

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
