[package]
name = "svastha-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Svastha trust contract: encryption envelope and event schema. Compiles to native and WASM."

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Trust contract crypto. Identity = BIP39 seed -> HKDF-SHA256 -> X25519 + Ed25519.
bip39 = { version = "2", features = ["rand"] }
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
zeroize = "1"
thiserror = "2"

# getrandom backs new-mnemonic generation; the WASM build needs the browser
# entropy source. Key *derivation* is RNG-free, so this only affects generate().
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
hex = "0.4"
