[package]
name = "svastha-core"
version = "0.10.0" # x-release-please-version
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Svastha trust contract: encryption envelope and event schema. Compiles to native and WASM."
readme = "README.md"
keywords = ["cryptography", "encryption", "health", "self-custody", "e2ee"]
categories = ["cryptography"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Lowercase-hex form of content-addressed event ids (runtime, not just tests).
hex = "0.4"

# Trust contract crypto. Identity = BIP39 seed -> HKDF-SHA256 -> X25519 + Ed25519.
bip39 = { version = "2", features = ["rand"] }
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
zeroize = "1"
thiserror = "2"

# Envelope: XChaCha20-Poly1305 payload sealing + X25519 key wrapping (ECIES).
# rand_core/OsRng supplies nonces and ephemeral keys; on wasm it draws from the
# browser entropy source already enabled via getrandom's `js` feature below.
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }

# getrandom backs new-mnemonic generation; the WASM build needs the browser
# entropy source. Key *derivation* is RNG-free, so this only affects generate().
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
