[package]
name = "svastha-devtool"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dev-only: pull this identity's relay blobs and decrypt them locally for inspection."
publish = false

[dependencies]
# No version/release-please marker: this crate never publishes, so it always
# builds against the workspace's current core.
svastha-core = { path = "../core" }
# The `import` subcommand re-runs the C-CDA/FHIR mappers headlessly; path-only
# (no version marker) since this crate never publishes.
svastha-import = { path = "../import" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
anyhow = "1"
ureq = "3"
base64 = "0.22"

[dev-dependencies]
svastha-relay = { path = "../relay" }
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
tempfile = "3"
# Only needed to call axum::serve when standing up the relay in-process for
# the integration test; svastha-relay::app already returns an axum::Router.
axum = "0.8"
