[package]
name = "svastha-node"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Svastha node: a trusted processing client that delegates inference to an OpenAI-compatible endpoint."
readme = "README.md"
keywords = ["health", "encryption", "inference", "rag", "svastha"]
categories = ["cryptography"]

[dependencies]
svastha-core = { path = "../core", version = "0.0.0" }
