[package]
name = "svastha-relay"
version = "0.9.0" # x-release-please-version
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Svastha relay: a zero-knowledge store-and-forward server for encrypted blobs."
readme = "README.md"
keywords = ["relay", "encryption", "zero-knowledge", "server", "svastha"]
categories = ["network-programming", "cryptography"]

[dependencies]
svastha-core = { path = "../core", version = "0.9.0" } # x-release-please-version
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Parse the hex auth headers (public key, signature).
hex = "0.4"
# Atomic blob writes (stage + rename) in the filesystem store.
tempfile = "3"
# CORS so a browser PWA on another origin can call the relay (auth is per-request
# signatures, no cookies, so any origin is safe).
tower-http = { version = "0.6", features = ["cors"] }
# Render the landing page's QR as inline SVG (no raster/image dep needed).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[dev-dependencies]
# ServiceExt::oneshot drives the router in-process, no port binding.
tower = "0.5"
