[package]
name = "svastha-wasm"
version = "0.10.0" # x-release-please-version
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings: exposes the svastha trust contract to the web app. Wraps svastha-core."
readme = "README.md"
keywords = ["wasm", "webassembly", "cryptography", "health", "svastha"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
svastha-core = { path = "../core", version = "0.10.0" } # x-release-please-version
svastha-import = { path = "../import", version = "0.10.0" } # x-release-please-version
wasm-bindgen = "0.2"
# Structured contract types (events) cross the JS boundary as JSON, reusing
# core's serde derives; binary (blobs, signatures) crosses as Uint8Array.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
# Surfaces Rust panics in the browser console instead of an opaque unreachable.
console_error_panic_hook = "0.1"
# Only for the WasmDataKey::wrap_to public-key parameter type — same version
# as core, no `static_secrets` (we only ever construct a public key here).
x25519-dalek = "2"
